# learning-cobol

./: README.md  compileandrun.sh  displayjson1.cob  displayjson1.js  hello.cob  module1.cob  script1.cob  singlequotes.cob  terriblecsv.cob
gnu-cobol-2.0/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  config.h  config.h.in  config.status  configure  configure.ac  defaults.h  gnu-cobol.spec  libtool  tarstamp.h
gnu-cobol-2.0/build_aux/: ChangeLog
gnu-cobol-2.0/cobc/: ChangeLog  Makefile  Makefile.am  Makefile.in  cobc.1  cobc.c  cobc.h  codegen.c  codeoptim.c  codeoptim.def  config.c  config.def  error.c  field.c  flag.def  parser.c  parser.h  parser.y  pplex.c  pplex.l  ppparse.c  ppparse.def  ppparse.h  ppparse.y  reserved.c  scanner.c  scanner.l  tree.c  tree.h  typeck.c  warning.def
gnu-cobol-2.0/cobc/.deps/: cobc-cobc.Po  cobc-codegen.Po  cobc-codeoptim.Po  cobc-config.Po  cobc-error.Po  cobc-field.Po  cobc-parser.Po  cobc-pplex.Po  cobc-ppparse.Po  cobc-reserved.Po  cobc-scanner.Po  cobc-tree.Po  cobc-typeck.Po
gnu-cobol-2.0/config/: ChangeLog  Makefile  Makefile.am  Makefile.in  acu.conf  bs2000.conf  cobol2002.conf  cobol2014.conf  cobol85.conf  default.conf  ibm.conf  mf.conf  mvs.conf  runtime.cfg
gnu-cobol-2.0/copy/: ChangeLog  Makefile  Makefile.am  Makefile.in  screenio.cpy
gnu-cobol-2.0/doc/: ChangeLog  Makefile  Makefile.am  Makefile.in  cbchelp.tex  cbconf.tex  cbhelp.tex  cbintr.tex  cbmnem.tex  cbrese.tex  cbrunt.tex  cbsyst.tex  cobcinfo.sh  gnucobol.info  gnucobol.texi  stamp-vti
gnu-cobol-2.0/extras/: CBL_OC_DUMP.cob  Makefile  Makefile.am  Makefile.in  README
gnu-cobol-2.0/lib/: ChangeLog  Makefile  Makefile.in
gnu-cobol-2.0/libcob/: ChangeLog  Makefile  Makefile.am  Makefile.in  call.c  coblocal.h  common.c  common.h  exception.def  fileio.c  intrinsic.c  move.c  numeric.c  screenio.c  strings.c  system.def  termio.c
gnu-cobol-2.0/libcob/.deps/: libcob_la-call.Plo  libcob_la-cobgetopt.Plo  libcob_la-common.Plo  libcob_la-fileio.Plo  libcob_la-intrinsic.Plo  libcob_la-move.Plo  libcob_la-numeric.Plo  libcob_la-screenio.Plo  libcob_la-strings.Plo  libcob_la-termio.Plo
gnu-cobol-2.0/po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  en.translate  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  gnu-cobol.pot  ja.gmo  ja.po  nl.gmo  nl.po
gnu-cobol-2.0/tests/: ChangeLog  Makefile  Makefile.am  Makefile.in  atconfig  atlocal  atlocal.in  listings-sed.sh  package.m4  testsuite  testsuite.at
gnu-cobol-2.0/tests/cobol85/: DB.txt  DBNOIX.txt  Makefile  Makefile.am  Makefile.in  report.pl  summary.pl  summary.txt  summarynoix.txt
gnu-cobol-2.0/tests/testsuite.src/: configuration.at  data_binary.at  data_display.at  data_packed.at  data_pointer.at  listings.at  run_accept.at  run_extensions.at  run_file.at  run_functions.at  run_fundamental.at  run_initialize.at  run_misc.at  run_refmod.at  run_reportwriter.at  run_returncode.at  run_subscripts.at  syn_copy.at  syn_definition.at  syn_file.at  syn_functions.at  syn_misc.at  syn_move.at  syn_occurs.at  syn_redefines.at  syn_reportwriter.at  syn_screen.at  syn_set.at  syn_subscripts.at  syn_value.at  used_binaries.at
