#
# Makefile gnucobol/config
#
# Copyright (C) 2003-2012, 2014-2015 Free Software Foundation, Inc.
# Written by Keisuke Nishida, Roger While
#
# This file is part of GnuCOBOL.
#
# The GnuCOBOL compiler is free software: you can redistribute it
# and/or modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# GnuCOBOL is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GnuCOBOL.  If not, see <http://www.gnu.org/licenses/>.

configdir = @COB_CONFIG_DIR@
config_DATA = default.conf cobol85.conf cobol2002.conf cobol2014.conf \
	acu.conf mf.conf ibm.conf mvs.conf bs2000.conf \
	runtime.cfg runtime_empty.cfg

EXTRA_DIST = $(config_DATA)
